--- a/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
+++ b/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
@@ -64,15 +64,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseRepository.cs" />
-    <Compile Include="CollectionName.cs" />
+    <Compile Include="LockManager.cs" />
+    <Compile Include="Models\CalendarIntervalTrigger.cs" />
+    <Compile Include="Models\CronTrigger.cs" />
+    <Compile Include="Models\DailyTimeIntervalTrigger.cs" />
     <Compile Include="Models\JobDetail.cs" />
-    <Compile Include="Models\Scheduler.cs" />
+    <Compile Include="Models\Lock.cs" />
+    <Compile Include="Models\PausedTriggerGroup.cs" />
+    <Compile Include="Models\SimpleTrigger.cs" />
     <Compile Include="Models\Trigger.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
+    <Compile Include="CollectionName.cs" />
+    <Compile Include="Models\Scheduler.cs" />
     <Compile Include="MongoDbJobStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\JobDetailRepository.cs" />
+    <Compile Include="Repositories\JobStoreClassMap.cs" />
+    <Compile Include="Repositories\LockRepository.cs" />
+    <Compile Include="Repositories\PausedTriggerGroupRepository.cs" />
     <Compile Include="Repositories\SchedulerRepository.cs" />
+    <Compile Include="Repositories\TriggerRepository.cs" />
+    <Compile Include="Serializers\SetSerializer.cs" />
+    <Compile Include="Serializers\TypeSerializer.cs" />
+    <Compile Include="TriggerFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
