--- a/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
+++ b/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
@@ -64,20 +64,33 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\GroupMatcherExtensions.cs" />
     <Compile Include="LockManager.cs" />
+    <Compile Include="Models\Calendar.cs" />
+    <Compile Include="Models\Id\BaseId.cs" />
+    <Compile Include="Models\Id\BaseKeyId.cs" />
     <Compile Include="Models\CalendarIntervalTrigger.cs" />
     <Compile Include="Models\CronTrigger.cs" />
     <Compile Include="Models\DailyTimeIntervalTrigger.cs" />
+    <Compile Include="Models\FiredTrigger.cs" />
+    <Compile Include="Models\Id\CalendarId.cs" />
+    <Compile Include="Models\Id\FiredTriggerId.cs" />
     <Compile Include="Models\JobDetail.cs" />
+    <Compile Include="Models\Id\JobDetailId.cs" />
     <Compile Include="Models\Lock.cs" />
     <Compile Include="Models\PausedTriggerGroup.cs" />
+    <Compile Include="Models\Id\PausedTriggerGroupId.cs" />
+    <Compile Include="Models\Id\SchedulerId.cs" />
     <Compile Include="Models\SimpleTrigger.cs" />
     <Compile Include="Models\Trigger.cs" />
+    <Compile Include="Models\Id\TriggerId.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="CollectionName.cs" />
     <Compile Include="Models\Scheduler.cs" />
     <Compile Include="MongoDbJobStore.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CalendarRepository.cs" />
+    <Compile Include="Repositories\FiredTriggerRepository.cs" />
     <Compile Include="Repositories\JobDetailRepository.cs" />
     <Compile Include="Repositories\JobStoreClassMap.cs" />
     <Compile Include="Repositories\LockRepository.cs" />
