--- a/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
+++ b/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
@@ -57,8 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseStoreTests.cs" />
+    <Compile Include="Jobs\SimpleJob.cs" />
+    <Compile Include="Jobs\SimpleJobWithSync.cs" />
     <Compile Include="MongoDbJobStoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmokeTestPerformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
