--- a/Nuget/Quartz.Spi.MongoDbJobStore.nuspec
+++ b/Nuget/Quartz.Spi.MongoDbJobStore.nuspec
@@ -9,7 +9,7 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>A MongoDB job store for Quartz.NET. This library targets the new MongoDB C# 2.0 driver.</description>
         <dependencies>
-            <group targetFramework=".NETFramework4.5.2">
+            <group targetFramework=".NETFramework4.5">
                 <dependency id="MongoDB.Driver" version="2.2.3" />
                 <dependency id="Common.Logging" version="3.3.1" />
                 <dependency id="Quartz" version="2.3.3" />
@@ -17,6 +17,6 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="Quartz.Spi.MongoDbJobStore\bin\Release\Quartz.Spi.MongoDbJobStore.dll" target="lib\net452\Quartz.Spi.MongoDbJobStore.dll" />
+        <file src="..\Quartz.Spi.MongoDbJobStore\bin\Release\Quartz.Spi.MongoDbJobStore.dll" target="lib\net45\Quartz.Spi.MongoDbJobStore.dll" />
     </files>
 </package>
