--- a/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.nuspec
+++ b/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
     <metadata>
         <id>Quartz.Spi.MongoDbJobStore</id>
-        <version>1.0.0</version>
+        <version>$version$</version>
         <title>MongoDB Job Store for Quartz.NET</title>
         <authors>Chris Robison</authors>
         <owners>chrisdrobison</owners>
