--- a/Quartz.Spi.MongoDbJobStore.Tests/packages.config
+++ b/Quartz.Spi.MongoDbJobStore.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
-  <package id="NUnit" version="3.2.0" targetFramework="net45" />
-  <package id="Quartz" version="2.3.3" targetFramework="net45" />
+  <package id="NUnit" version="3.6.0" targetFramework="net45" />
+  <package id="Quartz" version="2.4.1" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
 </packages>
