--- a/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.nuspec
+++ b/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.nuspec
@@ -12,9 +12,10 @@
         <description>A MongoDB job store for Quartz.NET. This library targets the new MongoDB C# 2.0 driver.</description>
         <dependencies>
             <group targetFramework=".NETFramework4.5">
-                <dependency id="MongoDB.Driver" version="2.2.3" />
+                <dependency id="MongoDB.Driver" version="2.4.2" />
                 <dependency id="Common.Logging" version="3.3.1" />
-                <dependency id="Quartz" version="2.3.3" />
+                <dependency id="Quartz" version="2.4.1" />
+                <dependency id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" />
             </group>
         </dependencies>
     </metadata>
