--- a/Quartz.Spi.MongoDbJobStore/packages.config
+++ b/Quartz.Spi.MongoDbJobStore/packages.config
@@ -2,8 +2,9 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
-  <package id="MongoDB.Bson" version="2.2.3" targetFramework="net45" />
-  <package id="MongoDB.Driver" version="2.2.3" targetFramework="net45" />
-  <package id="MongoDB.Driver.Core" version="2.2.3" targetFramework="net45" />
-  <package id="Quartz" version="2.3.3" targetFramework="net45" />
+  <package id="MongoDB.Bson" version="2.4.2" targetFramework="net45" />
+  <package id="MongoDB.Driver" version="2.4.2" targetFramework="net45" />
+  <package id="MongoDB.Driver.Core" version="2.4.2" targetFramework="net45" />
+  <package id="Quartz" version="2.4.1" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
 </packages>
