--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 configuration: Release
 image: Visual Studio 2017
-version: 3.0.{build}
+version: 3.0.0
 pull_requests:
   do_not_increment_build_number: true
 dotnet_csproj:
@@ -15,7 +15,7 @@ services: mongodb
 nuget:
   disable_publish_on_pr: true
 build_script:
-- ps: build.ps1 -Target AppVeyor
+- ps: .\build.ps1 -Target AppVeyor
 artifacts:
 - path: artifacts/*.nupkg
   name: NuGet
