--- a/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
+++ b/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>net452;net462;netstandard2.0</TargetFrameworks>
     <Version>1.0.0</Version>
+    <AssemblyName>Quartz.Extensions.MongoDB</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
