--- a/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
+++ b/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <TargetFrameworks>net452;net462;netcoreapp2.0</TargetFrameworks>
-
     <IsPackable>false</IsPackable>
+    <RootNamespace>Quartz.Extensions.MongoDB.Tests</RootNamespace>
+    <AssemblyName>Quartz.Extensions.MongoDB.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
