--- a/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
+++ b/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net452;net462;netstandard2.0</TargetFrameworks>
-    <AssemblyName>Quartz.Extensions.MongoDB</AssemblyName>
+    <AssemblyName>Quartz.Store.MongoDB</AssemblyName>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
