--- a/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
+++ b/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
@@ -3,8 +3,8 @@
   <PropertyGroup>
     <TargetFrameworks>net452;net462;netcoreapp2.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
-    <RootNamespace>Quartz.Store.MongoDB.Tests</RootNamespace>
-    <AssemblyName>Quartz.Store.MongoDB.Tests</AssemblyName>
+    <RootNamespace>Quartz.Spi.MongoDbJobStore.Tests</RootNamespace>
+    <AssemblyName>Quartz.Spi.MongoDbJobStore.Tests</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
