--- a/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
+++ b/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net462;netstandard2.0</TargetFrameworks>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.4.2" />
-    <PackageReference Include="Quartz" Version="3.0.4" />
+    <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
+    <PackageReference Include="Quartz" Version="3.2.0" />
     <PackageReference Include="Common.Logging" Version="3.4.1" />
   </ItemGroup>
 
