--- a/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
+++ b/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
@@ -10,7 +10,7 @@
     <PackageReference Include="MongoDB.Driver" Version="2.11.0" />
     <PackageReference Include="Quartz" Version="3.2.0" />
     <PackageReference Include="Common.Logging" Version="3.4.1" />
-    <PackageReference Include="Quartz.Serialization.Json" Version="3.2.0" />
+    <PackageReference Include="System.Text.Json" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
