--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest,ubuntu-latest,macOS-latest]
+        os: [ubuntu-latest]
         project: [mongodb-quartznet.sln]
     steps:
     - uses: actions/checkout@v2
