--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,11 @@ jobs:
         uses: isbang/compose-action@v1.2.0
       
       - name: Run test
-        run: './test.sh'
+        shell: bash
+        run: |
+          docker-compose -p mongo_quartz build
+          docker-compose -p mongo_quartz up -d
+          docker wait $(docker ps -aqf "name=myapp_mongo_quartz")
 
       - name: Upload coverage report artifact
         uses: actions/upload-artifact@v2.2.3
