--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
         uses: actions/upload-artifact@v2.2.3
         with:
           name: CoverageReport # Artifact name        
-          path: tests/Quartz.Spi.MongoDbJobStore.Tests/coveragereport # Directory containing files to upload
+          path: tests/Quartz.Spi.MongoDbJobStore.Tests/coveragereport/* # Directory containing files to upload
