--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,9 +23,12 @@ jobs:
         run: |
           docker-compose -p mongo_quartz down 
           docker-compose -p mongo_quartz rm -f
-
+      - name: List files
+        run: |
+          ls
+          echo ${{ github.workspace }}
       - name: Upload coverage report artifact
         uses: actions/upload-artifact@v2.2.3
         with:
           name: CoverageReport # Artifact name        
-          path: tests/Quartz.Spi.MongoDbJobStore.Tests/coveragereport/* # Directory containing files to upload
+          path: ${{ github.workspace }}/tests/Quartz.Spi.MongoDbJobStore.Tests/coveragereport/* # Directory containing files to upload
