--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,10 @@ jobs:
           docker-compose -p mongo_quartz rm -f
       - name: List files
         run: |
-          ls
-          echo ${{ github.workspace }}
+          ls tests/Quartz.Spi.MongoDbJobStore.Tests/coveragereport
       - name: Upload coverage report artifact
         uses: actions/upload-artifact@v2.2.3
         with:
           name: CoverageReport # Artifact name        
-          path: ${{ github.workspace }}/tests/Quartz.Spi.MongoDbJobStore.Tests/coveragereport/* # Directory containing files to upload
+          path: tests/Quartz.Spi.MongoDbJobStore.Tests/coveragereport/ # Directory containing files to upload
+          retention-days: 5
