--- a/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
+++ b/src/Quartz.Spi.MongoDbJobStore/Quartz.Spi.MongoDbJobStore.csproj
@@ -1,15 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;net462;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net452;net462;netstandard2.0;net6.0</TargetFrameworks>
     <AssemblyName>Quartz.Spi.MongoDbJobStore</AssemblyName>
     <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.4.2" />
-    <PackageReference Include="Quartz" Version="3.0.4" />
-    <PackageReference Include="Common.Logging" Version="3.4.1" />
+	<PackageReference Include="MongoDB.Driver" Version="2.18.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	<PackageReference Include="Quartz" Version="3.4.0" />
+	<PackageReference Include="Quartz.Serialization.Json" Version="3.4.0" />
+	<PackageReference Include="Common.Logging" Version="3.4.1" />
   </ItemGroup>
 
 </Project>
