--- a/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
+++ b/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net452;net462;netcoreapp2.0</TargetFrameworks>
+    <TargetFrameworks>net452;net462;netstandard2.0;net6.0</TargetFrameworks>
     <IsPackable>false</IsPackable>
     <RootNamespace>Quartz.Spi.MongoDbJobStore.Tests</RootNamespace>
     <AssemblyName>Quartz.Spi.MongoDbJobStore.Tests</AssemblyName>
