--- a/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
+++ b/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
@@ -1,22 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>net462;net5.0</TargetFrameworks>
-    <IsPackable>false</IsPackable>
-    <RootNamespace>Quartz.Spi.MongoDbJobStore.Tests</RootNamespace>
-    <AssemblyName>Quartz.Spi.MongoDbJobStore.Tests</AssemblyName>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net462;net8.0</TargetFrameworks>
+		<IsPackable>false</IsPackable>
+		<RootNamespace>Quartz.Spi.MongoDbJobStore.Tests</RootNamespace>
+		<AssemblyName>Quartz.Spi.MongoDbJobStore.Tests</AssemblyName>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-    <PackageReference Include="Squadron.Mongo" Version="0.8.1" />
-    <PackageReference Include="xunit" Version="2.4.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentAssertions" Version="6.12.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
+		<PackageReference Include="Squadron.Mongo" Version="0.18.0" />
+		<PackageReference Include="xunit" Version="2.4.2" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Quartz.Spi.MongoDbJobStore\Quartz.Spi.MongoDbJobStore.csproj" />
-  </ItemGroup>
-  
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\Quartz.Spi.MongoDbJobStore\Quartz.Spi.MongoDbJobStore.csproj" />
+	</ItemGroup>
+
 </Project>
