--- a/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
+++ b/tests/Quartz.Spi.MongoDbJobStore.Tests/Quartz.Spi.MongoDbJobStore.Tests.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Squadron.Mongo" Version="0.18.0" />
 		<PackageReference Include="xunit" Version="2.4.2" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
+		<PackageReference Include="Quartz.Serialization.Json" Version="3.8.0" />
 	</ItemGroup>
 
 	<ItemGroup>
